--- a/styles/sections/index/career.module.scss
+++ b/styles/sections/index/career.module.scss
@@ -2,174 +2,188 @@
 @import '../../scss/mixins';
 
 .section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
-	.area {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
+.area {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 1rem;
 
-		h3 {
-			margin-top: - .25rem;
-			margin-bottom: .35rem;
-		}
+  h3 {
+    margin-top: - .25rem;
+    margin-bottom: .35rem;
+  }
 	
-		h4 {
-			font-size: .9rem;
-			margin-bottom: .25rem;
-			text-transform: none;
-			letter-spacing: 0;
-		}
+  h4 {
+    font-size: .9rem;
+    margin-bottom: .25rem;
+    text-transform: none;
+    letter-spacing: 0;
+  }
 	
-		h5 {
-			font-size: .9rem;
-			margin-bottom: .25rem;
-			opacity: .5;
-		}
-	}
+  h5 {
+    font-size: .9rem;
+    margin-bottom: .25rem;
+    opacity: .5;
+  }
+}
 
-	.company {
-		position: relative;
-		display: flex;
-		flex-direction: row;
-		gap: 1rem;
-	}
+.company,
+.companyPositions {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
 
-	.company,
-	.position {
-		border: 1px solid var(--primary-dark);
-		border-radius: 1rem;
-		overflow: hidden;
+.companyContent,
+.positionContent {
+  width: 100%;
+}
 
-		padding: var(--padding);
-		--padding: 2rem;
-		--padding-left: var(--padding);
-		--padding-top: var(--padding);
-		--padding-right: var(--padding);
-		--padding-bottom: var(--padding);
+.companyHeader,
+.positionHeader {
+  width: 100%;
+}
 
-		background: var(--background-dim2);
-	}
+.description {
+  width: 100%;
+}
 
-	.companyContent {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-		max-width: calc( var(--grid-32) * 20 );
-	}
+.company {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
 
-	.companyPositions {
-		display: flex;
-		flex-direction: column;
-		gap: 1rem;
-	}
+.company,
+.position {
+  border: 1px solid var(--primary-dark);
+  border-radius: 1rem;
+  overflow: hidden;
 
-	.position {
-		margin-left: calc( var(--grid-32) * 2 );
-		background: var(--background-dim);
-		max-width: 100%;
+  padding: var(--padding);
+  --padding: 2rem;
+  --padding-left: var(--padding);
+  --padding-top: var(--padding);
+  --padding-right: var(--padding);
+  --padding-bottom: var(--padding);
 
-		&.first {
-			.content {
-				padding-bottom: 0;
-			}
-		}
+  background: var(--background-dim2);
+}
 
-		.positionContent {
-			position: relative;
-			display: flex;
-			flex-direction: column;
-			gap: 2rem;
+.companyPositions {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
-			.list {
-				display: flex;
-				flex-direction: column;
-				gap: .75rem;
+.position {
+  margin-left: calc( var(--grid-32) * 2 );
+  background: var(--background-dim);
+  max-width: 100%;
 
-				.subList {
-					position: relative;
-					margin-left: 2rem;
-					margin-top: .5rem;
-					display: block;
-					color: var(--primary);
+  &.first {
+    .content {
+      padding-bottom: 0;
+    }
+  }
 
-					.bullet {
-						position: absolute;
-						margin-left: -1.5rem;
-						&:before {
-							content: "⇒";
-						}
-					}
-				}
-				
-			}
-		}
-	}
-	ul.bullet-points {
-		list-style: none;
-		padding-left: 1.5em;
-	  }
-	  
-	  ul.bullet-points > li {
-		position: relative;
-	  }
-	  
-	  ul.bullet-points > li:before {
-		content: "";
-		display: inline-block;
+  .positionContent {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    .list {
+      display: flex;
+      flex-direction: column;
+      gap: .75rem;
+
+      .subList {
+        position: relative;
+        margin-left: 2rem;
+        margin-top: .5rem;
+        display: block;
+        color: var(--primary);
+
+        .bullet {
+          position: absolute;
+          margin-left: -1.5rem;
+          &:before {
+            content: "⇒";
+          }
+        }
+      }
+    }
+  }
+}
+ul.bullet-points {
+  list-style: none;
+  padding-left: 1.5em;
+}
+ul.bullet-points > li {
+  position: relative;
+}
+ul.bullet-points > li:before {
+  content: "";
+  display: inline-block;
 		width: 10px; /* Adjust the size of the bullet point circle */
 		height: 10px; /* Adjust the size of the bullet point circle */
-		border-radius: 50%;
+  border-radius: 50%;
 		background-color: #000; /* Adjust the color of the bullet point circle */
-		position: absolute;
+  position: absolute;
 		top: 0.5em; /* Adjust the vertical alignment of the bullet point circle */
-		left: -1em;
-	  }
-	
+  left: -1em;
+}
 
-	.technicalSvg {
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		right: 0;
+.technicalSvg {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
 
-		img { 
-			transform: rotate(90deg);
-		}
-	}
+  img { 
+    transform: rotate(90deg);
+  }
 }
 
 @include media($max: $mobile) {
-	.section {
-		.area {
-			.company,
-			.position {
-				padding: 2rem 1rem;
-			}
-			.position {
-				padding-bottom: 1rem;
-				--padding-top: 1rem;
-			}
-			.companyContent {
-				max-width: 100%;
-			}
-			.positionContent {
-				gap: 1rem;
-				max-width: 100%;
-			}
-			p {
-				font-size: .8rem;
-			}
-			ul.list {
-				li {
-					font-size: .8rem;
-				}
-			}
-			
-			ul:not(.list) {
-				li {
-					font-size: .6rem;
-				}
-			}
-		}
-	}
+  .section {
+    .area {
+      .company,
+      .position {
+        padding: 2rem 1rem;
+      }
+      .position {
+        padding-bottom: 1rem;
+        --padding-top: 1rem;
+      }
+      .companyContent {
+        max-width: 100%;
+      }
+      .positionContent {
+        gap: 1rem;
+        max-width: 100%;
+      }
+      p {
+        font-size: .8rem;
+      }
+      .ul.list {
+        li {
+          font-size: .8rem;
+        }
+      }
+      
+      ul:not(.list) {
+        li {
+          font-size: .6rem;
+        }
+      }
+    }
+  }
 }
